--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -29,7 +29,13 @@
             <param name="ios-package" value="CDVStatusBar" onload="true" />
         </feature>
         -->
-	
+	<gap:config-file platform="ios" parent="UIStatusBarHidden">
+    <true/>
+</gap:config-file>
+
+<gap:config-file platform="ios" parent="UIViewControllerBasedStatusBarAppearance">
+    <false/>
+</gap:config-file>
     <!-- Customize your app and platform with the preference element. -->
 	<!--<preference name="permissions"                value="nome"/>-->
     <preference name="phonegap-version"           value="3.1.0" />          <!-- all: current version of PhoneGap -->
