--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -25,19 +25,7 @@
 	
 		
     
-      	<!--<feature name="StatusBar">
-            <param name="ios-package" value="CDVStatusBar" onload="true" />
-        </feature>
-        -->
-<!--
-	<gap:config-file platform="ios" parent="UIStatusBarHidden">
-    <true/>
-</gap:config-file>
 
-<gap:config-file platform="ios" parent="UIViewControllerBasedStatusBarAppearance">
-    <false/>
-</gap:config-file>
--->
     <!-- Customize your app and platform with the preference element. -->
 	<preference name="permissions"                value="nome"/>
     <preference name="phonegap-version"           value="3.1.0" />          <!-- all: current version of PhoneGap -->
@@ -54,16 +42,14 @@
     <preference name="android-installLocation"    value="auto" />           <!-- android: app install location. 'auto' will choose. 'internalOnly' is device memory. 'preferExternal' is SDCard. -->
     <preference name="DisallowOverscroll" value="true" />
     <preference name="UIWebViewBounce" value="false" />
-    <!--<preference name="StatusBarOverlaysWebView" value="false" />
-    <preference name="StatusBarBackgroundColor" value="#cccccc" />-->
     <preference name="SuppressesIncrementalRendering" value="true"/>
     
-    <!--<preference name="StatusBarBackgroundColor" value="#252c47" />-->
 
     <!-- Plugins -->
 
     <!-- Core plugins -->
-    <!--<gap:plugin name="org.apache.cordova.battery-status" />
+    <!--
+    <gap:plugin name="org.apache.cordova.battery-status" />
     <gap:plugin name="org.apache.cordova.camera" />
     <gap:plugin name="org.apache.cordova.media-capture" />
     <gap:plugin name="org.apache.cordova.console" />
@@ -72,15 +58,16 @@
     <gap:plugin name="org.apache.cordova.device-motion" />
     <gap:plugin name="org.apache.cordova.device-orientation" />
     <gap:plugin name="org.apache.cordova.dialogs" />
-    <!-- <gap:plugin name="org.apache.cordova.file" />
+    <!-- 
+    <gap:plugin name="org.apache.cordova.file" />
 	<gap:plugin name="org.apache.cordova.file-transfer" />
     <gap:plugin name="org.apache.cordova.geolocation" />
     <gap:plugin name="org.apache.cordova.globalization" /> -->
     <gap:plugin name="org.apache.cordova.inappbrowser" />
     <gap:plugin name="org.apache.cordova.media" />
     <gap:plugin name="org.apache.cordova.network-information" />
-    <!--<gap:plugin name="com.phonegap.plugin.statusbar" />-->
-	<!--<gap:plugin name="org.apache.cordova.splashscreen" />
+	<!--
+	<gap:plugin name="org.apache.cordova.splashscreen" />
     <gap:plugin name="org.apache.cordova.vibration" /> -->
 
     <!-- Third party plugins -->
@@ -94,27 +81,26 @@
     <icon src="res/icon/android/sgs_icon_android_48.png"   gap:platform="android"    gap:density="mdpi" />
     <icon src="res/icon/android/sgs_icon_android_72.png"   gap:platform="android"    gap:density="hdpi" />
     <icon src="res/icon/android/sgs_icon_android_96.png"  gap:platform="android"    gap:density="xhdpi" />
-    <icon src="res/icon/blackberry/icon-80.png"     gap:platform="blackberry" />
-    <icon src="res/icon/blackberry/icon-80.png"     gap:platform="blackberry" gap:state="hover"/>
+    
     <icon src="res/icon/ios/icon-57.png"            gap:platform="ios"        width="57" height="57" />
     <icon src="res/icon/ios/icon-72.png"            gap:platform="ios"        width="72" height="72" />
     <icon src="res/icon/ios/icon-57-2x.png"         gap:platform="ios"        width="114" height="114" />
     <icon src="res/icon/ios/icon-72-2x.png"         gap:platform="ios"        width="144" height="144" />
-    <icon src="res/icon/webos/icon-64.png"          gap:platform="webos" />
-    <icon src="res/icon/windows-phone/icon-48.png"  gap:platform="winphone" />
-    <icon src="res/icon/windows-phone/icon-173.png" gap:platform="winphone"   gap:role="background" />
+    
 
     <!-- Define app splash screen for each platform. -->
-    <!-- <gap:splash src="res/screen/android/screen-ldpi-portrait.png"  gap:platform="android" gap:density="ldpi" />
+    <!-- 
+    <gap:splash src="res/screen/android/screen-ldpi-portrait.png"  gap:platform="android" gap:density="ldpi" />
     <gap:splash src="res/screen/android/screen-mdpi-portrait.png"  gap:platform="android" gap:density="mdpi" />
     <gap:splash src="res/screen/android/screen-hdpi-portrait.png"  gap:platform="android" gap:density="hdpi" />
     <gap:splash src="res/screen/android/screen-xhdpi-portrait.png" gap:platform="android" gap:density="xhdpi" />
-    <gap:splash src="res/screen/blackberry/screen-225.png"         gap:platform="blackberry" />
+    
+    
     <gap:splash src="res/screen/ios/screen-iphone-portrait.png"    gap:platform="ios"     width="320" height="480" />
     <gap:splash src="res/screen/ios/screen-iphone-portrait-2x.png" gap:platform="ios"     width="640" height="960" />
     <gap:splash src="res/screen/ios/screen-ipad-portrait.png"      gap:platform="ios"     width="768" height="1024" />
     <gap:splash src="res/screen/ios/screen-ipad-landscape.png"     gap:platform="ios"     width="1024" height="768" />
-    <gap:splash src="res/screen/windows-phone/screen-portrait.jpg" gap:platform="winphone" />
+
 	-->
     <!--
         Define access to external domains.
@@ -131,4 +117,3 @@
     -->
 
 </widget>
-
