information på inlogg sidan fixad

--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -141,6 +141,10 @@ img.scale-with-grid-tvatt-information{
 	
 }
 
+.information-text-middle{
+	padding-top: 4%;	
+}
+
 .rutatvatt{
 	height: auto;
 	/*padding-top: 10px;*/
