--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -101,7 +101,16 @@
     <gap:splash src="res/screen/ios/screen-ipad-portrait.png"      gap:platform="ios"     width="768" height="1024" />
     <gap:splash src="res/screen/ios/screen-ipad-landscape.png"     gap:platform="ios"     width="1024" height="768" />
 	-->
+	
+	<!-- iPhone and iPod touch -->
+	<gap:splash src="res/screen/ios/Default.png" gap:platform="ios" width="320" height="480" />
+	<gap:splash src="res/screen/ios/Default@2x.png" gap:platform="ios" width="640" height="960" />
 
+	<!-- iPhone 5 / iPod Touch (5th Generation) -->
+	<gap:splash src="res/screen/ios/Default-568h@2x.png" gap:platform="ios" width="640" height="1136" />
+	
+	
+	
     <!--
         Define access to external domains.
 
