--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -109,7 +109,12 @@
 	<!-- iPhone 5 / iPod Touch (5th Generation) -->
 	<gap:splash src="res/screen/ios/Default-568h@2x.png" gap:platform="ios" width="640" height="1136" />
 	
-	
+	<!-- Android telefoner -->
+	<gap:splash src="res/screen/android/ldpi.png" gap:platform="android" gap:density="ldpi" />
+	<gap:splash src="res/screen/android/mdpi.png" gap:platform="android" gap:density="mdpi" />
+	<gap:splash src="res/screen/android/hdpi.png" gap:platform="android" gap:density="hdpi" />
+	<gap:splash src="res/screen/android/xhdpi.png" gap:platform="android" gap:density="xhdpi" />
+	<gap:splash src="xxhdpi.png" gap:platform="android" gap:density="xxhdpi" />
 	
     <!--
         Define access to external domains.
