--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -77,18 +77,15 @@
 @-webkit-keyframes myfirst{
 	0% {
 		-webkit-opacity: 0;
+		font-size: 1.0vh;
 		width: 10%;
 		margin-left: 70%;
 		top: 5%;
 		color: #252c47;
-		font-size: 0px;
-	}
-	
-	75%{
-		font-size: 0px;
 	}
 	
 	100% {	
+		font-size: 1.0vh;
 		top: 10%;
 		width: 90%;
 		margin-right: 2%;
