--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -27,12 +27,6 @@
     
 
     <!-- Customize your app and platform with the preference element. -->
-    
-    
-
-    
-    
-    
 	<preference name="permissions"                value="nome"/>
     <preference name="phonegap-version"           value="3.1.0" />          <!-- all: current version of PhoneGap -->
     <preference name="orientation"                value="portrait" />        <!-- all: default means both landscape and portrait are enabled -->
@@ -54,40 +48,29 @@
     <!-- Plugins -->
 
     <!-- Core plugins -->
-    
-    
-    <gap:plugin name="org.apache.cordova.device" version="0.2.8" />
-	<gap:plugin name="org.apache.cordova.device-motion" version="0.2.6" />
-	<gap:plugin name="org.apache.cordova.device-orientation" version="0.3.5" />
-	<gap:plugin name="org.apache.cordova.dialogs" version="0.2.6" />
-	<gap:plugin name="org.apache.cordova.inappbrowser" version="0.2.4" />
-	<gap:plugin name="org.apache.cordova.media" version="0.2.8" />
-	<gap:plugin name="org.apache.cordova.network-information" version="0.2.7" />
-	<gap:plugin name="org.apache.cordova.splashscreen" version="0.2.7" />
     <!--
     <gap:plugin name="org.apache.cordova.battery-status" />
     <gap:plugin name="org.apache.cordova.camera" />
     <gap:plugin name="org.apache.cordova.media-capture" />
     <gap:plugin name="org.apache.cordova.console" />
     <gap:plugin name="org.apache.cordova.contacts" />-->
-
-
-
-
+    <gap:plugin name="org.apache.cordova.device" />
+    <gap:plugin name="org.apache.cordova.device-motion" />
+    <gap:plugin name="org.apache.cordova.device-orientation" />
+    <gap:plugin name="org.apache.cordova.dialogs" />
     <!-- 
     <gap:plugin name="org.apache.cordova.file" />
 	<gap:plugin name="org.apache.cordova.file-transfer" />
     <gap:plugin name="org.apache.cordova.geolocation" />
     <gap:plugin name="org.apache.cordova.globalization" /> -->
-
-
-
-
+    <gap:plugin name="org.apache.cordova.inappbrowser" />
+    <gap:plugin name="org.apache.cordova.media" />
+    <gap:plugin name="org.apache.cordova.network-information" />
+	<gap:plugin name="org.apache.cordova.splashscreen" />
 	<!--
     <gap:plugin name="org.apache.cordova.vibration" /> -->
 
     <!-- Third party plugins -->
-    
     <!-- A list of available plugins are available at https://build.phonegap.com/plugins -->
     <!-- 
         <gap:plugin name="com.phonegap.plugins.barcodescanner" />
