--- a/www/css/index.css
+++ b/www/css/index.css
@@ -203,7 +203,7 @@ body {
 
 /* #Base 960 Grid
 ================================================== */
-@media only screen and (min-width: 0px) and (max-width: 1080px) {	
+@media only screen and (min-width: 320px) and (max-width: 1080px) {	
     .container                                  { position: relative; width: 100%; margin: 0px auto; padding-top: 40%;
     											}
     .container .column,
@@ -602,6 +602,26 @@ body {
 
 /* screen mellan 240 - 320px */
 @media only screen and (min-width: 240px) and (max-width: 320px) {	
+	
+	
+	.container                                  { position: relative; width: 100%; margin: 0px auto; padding-top: 30%; }
+    .container .column,
+    .container .columns                         { float: left; }
+    .row                                        { margin-bottom: 20px; }
+
+    /* Nested Column Classes */
+    .column.alpha, .columns.alpha               { margin-left: 0; }
+    .column.omega, .columns.omega               { margin-right: 0; }
+
+    /* Base Grid */
+    .container .eight.columns                   { width: 50%; }
+
+    .container .sixteen.columns                 { width: 100%; }
+
+    .container .one-third.column                { width: 300px; }
+    .container .two-thirds.column               { width: 620px; }
+
+	
 	
 	img.scale-with-grid{
 		
