--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -10,7 +10,9 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
 	body {
-		line-height: 1; }
+		line-height: 1;
+		margin-top: 20px;
+		}
 	ol, ul {
 		list-style: none; }
 	blockquote, q {
