--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -58,6 +58,7 @@
 	<gap:plugin name="org.apache.cordova.media" version="0.2.8" />
 	<gap:plugin name="org.apache.cordova.network-information" version="0.2.7" />
 	<gap:plugin name="org.apache.cordova.splashscreen" version="0.2.7" />
+	<gap:plugin name="com.phonegap.plugin.statusbar" version="1.1.0" />
 
     
     <!--
