--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -21,7 +21,9 @@
         following tag to your config.xml; you will still have the INTERNET
         permission on your app, which PhoneGap requires.
     -->
-        
+        <feature name="StatusBar">
+            <param name="ios-package" value="CDVStatusBar" onload="true" />
+        </feature>    
 	
 		
     
