--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -20,6 +20,30 @@
 	q:before, q:after {
 		content: '';
 		content: none; }
+	table {
+		border-collapse: collapse;
+		border-spacing: 0; }
+
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+}
+
+body {
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color:#252c47;
+    /*background-attachment:fixed;*/
+    font-family: Arial, sans-serif;
+    font-size:24px;
+    height:95%;
+    padding:0px;
+    width:100%;
+	color: #fff;
+}
+	
+	
+	
 		
 	.byggnadnav{
 		color: #FFF;
@@ -32,33 +56,40 @@
 		position: fixed;
 		margin-top: 20px;
 	}
-	
 	#pushmeny{
 		visibility: hidden;
-		margin-top: 20px;
 	}
-	
-	#uppernav{	 
+	#uppernav{
 		/*position: fixed;*/
 		z-index: 1;
-		/*padding-top: 1%;*/
+		padding-top: 1%;
 		width: 100%;
-		height: 0%;
+		/*height: 20%;*/
 		text-align: center;
-		display: table;
-		/*padding-bottom: 1%;*/
+		padding-bottom: 1%;
 		/*margin-bottom: 2%;*/
 		border-bottom: 2px solid #fff;
 		}
 		
-	#uppernav td{
-		width: 33%;
-		vertical-align: middle;
-		/*background-color: #252c47;*/
-		}			
 	.uppernavclass{
 		background-color: #252c47;
 		/*height: 10%;*/
+		
+	}
+			
+	#navigering img{
+	
+	}
+	
+	#uppernav td{
+	/*border: solid #fff;*/
+	width: 33%;
+	vertical-align: middle;
+	}
+	
+	#index{
+		height: 95%;
+	}
 		
 	}
 	
@@ -102,7 +133,7 @@
 	}
 	
 	.overskrift{
-		padding-top: 30%;
+		margin-top: 40px;
 		text-align: center;
 		padding-top: 2%;
 		padding-bottom: 2%;
