--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -42,8 +42,6 @@ body {
 	color: #fff;
 }
 	
-	
-	
 		
 	.byggnadnav{
 		color: #FFF;
@@ -54,26 +52,26 @@ body {
 	
 	#helamenyn{
 		position: fixed;
-		margin-top: 20px;
+		padding-top: 20px;
+		background-color: #252c47;
+
 	}
+	
 	#pushmeny{
 		visibility: hidden;
 	}
+	
 	#uppernav{
-		/*position: fixed;*/
 		z-index: 1;
-		padding-top: 1%;
 		width: 100%;
-		/*height: 20%;*/
 		text-align: center;
-		padding-bottom: 1%;
-		/*margin-bottom: 2%;*/
 		border-bottom: 2px solid #fff;
-		}
+	}
 		
 	.uppernavclass{
 		background-color: #252c47;
 		/*height: 10%;*/
+
 		
 	}
 			
