--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -46,8 +46,8 @@ body {
 	.byggnadnav{
 		color: #FFF;
 		border: 2px solid #FFF;
-		padding-top: 2%;
-		padding-bottom: 2%;
+		padding-top: 4%;
+		padding-bottom: 4%;
 	}
 	
 	#helamenyn{
@@ -88,13 +88,11 @@ body {
 	#index{
 		height: 95%;
 	}
-		
-	}
 	
 	#navtvatta{
 		/*margin-top: 30%;*/
 		/*display: none;*/
-
+		margin-bottom: 3%;
 	}
 	
 	#navnummer{
@@ -110,7 +108,6 @@ body {
 		}
 		
 	#navtvatta td{
-		/*border: 2px solid white;*/
 		text-align: center;
 		vertical-align: middle;
 		width: 25%;
@@ -133,8 +130,8 @@ body {
 	.overskrift{
 		margin-top: 20px;
 		text-align: center;
-		padding-top: 2%;
-		padding-bottom: 2%;
+		margin-bottom: 2%;
+		padding-bottom: 20px;
 	}
 	
 	.overskrift a{
@@ -153,21 +150,19 @@ body {
 		
 	}
 	
-	.lokalnavlank{
-		
-		
-	}
+
 	
 	.lokalnav, .typlokal{
 		background-color: #FFF;
 		color: #252c47;
 		padding: 3%;
+		margin-bottom: 3%;
+		border: 2px solid #FFF;
 	}
 	
 	.typlokallank{
 		border: 2px solid #FFF;
 		padding: 3%;
-
 	}
 
 	.navnummer{
