--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -10,6 +10,7 @@ SGS Hemma applikation. Låter dig öppna entrédörren och komma åt bokningsfun
 		<author href="www.sgsstudentbostader.se" email="app@sgsstudentbostader.se">
 SGS Studentbostäder
 		</author>
+		<preference name="permission" value="none">
 		<preference name="phonegap-version" value="3.3.0" />
 		<preference name="orientation" value="portrait" />
 		<preference name="fullscreen" value="true" />
