--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -42,6 +42,15 @@ SGS Studentbostäder
 		<preference name="LoadUrlTimeoutValue" value="200000" />
 		<preference name="disable-cursor" value="true" />
 		
+		<feature name="http://api.phonegap.com/1.0/battery"/>
+		<feature name="http://api.phonegap.com/1.0/camera"/>
+		<feature name="http://api.phonegap.com/1.0/contacts"/>
+		<feature name="http://api.phonegap.com/1.0/file"/>
+		<feature name="http://api.phonegap.com/1.0/geolocation"/>
+		<feature name="http://api.phonegap.com/1.0/media"/>
+		<feature name="http://api.phonegap.com/1.0/network"/>
+		<feature name="http://api.phonegap.com/1.0/notification"/>
+		
 		<gap:platform name="ios" />
 		<gap:platform name="android" />
 		<gap:plugin name="org.apache.cordova.dialogs"  />
