--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -57,14 +57,15 @@ body {
 		padding-bottom: 4%;
 	}
 	#allmeny{
-		background-color: #FFF;
+		/*background-color: #FFF;*/
 	}
 	
 	#helamenyn{
-		position: fixed;
+		z-index: -1;
+		/*position: fixed;*/
 		padding-top: 20px;
-		background-color: #252c47;
-
+		/*background-color: #252c47;*/
+		/*background-color: #fff;*/
 
 	}
 	
@@ -77,7 +78,8 @@ body {
 	}
 	
 	#uppernav{
-		z-index: 1;
+		/*background-color: #FFF;*/
+		z-index: 10;
 		width: 100%;
 		text-align: center;
 		border-bottom: 2px solid #fff;
