--- a/www/css/index.css
+++ b/www/css/index.css
@@ -981,7 +981,8 @@ body {
 	input[type="reset"]:active,
 	input[type="button"]:active {
 		opacity:0.7;
-		border: 1px solid #666;
+		border: 0px #666;
+		/*border: 1px solid #666;*/
 		background: #ccc; /* Old browsers */
 		background: #ccc -moz-linear-gradient(top, rgba(255,255,255,.35) 0%, rgba(10,10,10,.4) 100%); /* FF3.6+ */
 		background: #ccc -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.35)), color-stop(100%,rgba(10,10,10,.4))); /* Chrome,Safari4+ */
