--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -48,7 +48,7 @@ SGS Studentbostäder
 		
 		<gap:platform name="ios" />
 		<gap:platform name="android" />
-		<gap:plugin name="org.apache.cordova.dialogs"  />
+		<gap:plugin name="org.apache.cordova.dialogs" version="0.2.6" />
 		<gap:plugin name="org.apache.cordova.inappbrowser"  />
 		<gap:plugin name="org.apache.cordova.network-information"  />
 		<gap:plugin name="org.apache.cordova.splashscreen"  />
