--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -175,19 +175,21 @@ img.scale-with-grid-start-information{
 	}
 
 img.scale-with-grid-tvatt-information{
-	max-width: 80%;
+	max-width: 15%;
 	height: auto;
 	float: left;
+
 }
 	
 .inforuta tr{
 	border: 40px transparent;
 	margin-top: 50px;
+
 }
 
 .inforuta td{
 	/*height: auto;*/
-	
+
 }
 
 .information-text-middle-start{
@@ -208,8 +210,9 @@ img.scale-with-grid-tvatt-information{
 	float: left;
 	vertical-align: middle;
 	width: auto;
+	border: solid 2px #FFF;
 	/*font-size: 1.0vh;*/
-	padding-top: 2%;
+	/*padding-top: 2%;*/
 
 	
 }
@@ -224,11 +227,15 @@ img.scale-with-grid-tvatt-information{
 }
 
 .rutatvatt{
-
 	/*padding-top: 10px;*/
 	width: 15%;
 	padding-top: 2%;
-	
+}
+
+/*Här sätter vi så att texten blir centrerad */
+.rutatvatt p{
+	padding-top: 3.75%;
+	padding-left: 17%;
 }
 
 .rutaett{
