--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -1,8 +1,6 @@
-
-
 	.nyinforuta{
 		/*opacity: 0.90;*/
-		position: fixed;
+		position: absolute;
 		z-index: 10;
 		height: 100%;
 		/*background-color: #fff;
@@ -40,11 +38,12 @@
 }
 
 #dummie{
-	position: fixed;
+	position: absolute;
 	z-index: -10;
 	width: 100%;
 	height: 100%;
 	opacity: 1.0;
+
 }	
 
 .bakgrundinformation_hide{
