--- a/www/css/index.css
+++ b/www/css/index.css
@@ -50,100 +50,27 @@ body {
 
 
 
-/*.bakgrundinformation_hide{
-	z-index: -1;
 
-}
-
-.bakgrundinformation_show{
-	z-index: 1;
-	background-color: #fff;
-	-webkit-opacity: 0.5;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-}
-
-.inforuta_hide{
-	display: none;
-	height: auto;
-	top: 20%;
-	width: 60%;
-	margin-left: 20%;
-	color: #FFF;
-	background-color: #252c47;
-	padding: 3%;
-	border-radius: 50px;
-	font-size: 1.5vw;
-	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */	
-	
-/*}
-
-.inforuta_ani_hide{
-	-webkit-opacity: 0;
-	z-index: 2;
-	position: absolute;
-	height: auto;
-	top: 20%;
-	width: 60%;
-	margin-left: 20%;
-	color: #252c47;
-	background-color: #000;
-	padding: 3%;
-	border-radius: 50px;
-	font-size: 0px;
-	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */
-/*	-webkit-animation-direction: reverse;
-	
-}
-.inforuta{
-
-	z-index: 2;
-	position: absolute;
-	height: auto;
-	top: 20%;
-	width: 60%;
-	margin-left: 20%;
-	color: #FFF;
-	background-color: #252c47;
-	padding: 3%;
-	border-radius: 50px;
-	font-size: 1.5vw;
-	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */
-/*	
-}
-.rutaett{
-	float: left;
-}
-.rutatva{
-	float: left;
-	vertical-align: bottom;
-}
-.rutatva a{
-	vertical-align: bottom;
-	font-size: 1.5vw;
-	text-decoration: none;
-	
-}
-@-webkit-keyframes myfirst{
-	0% {
-		-webkit-opacity: 0;
-		color: #fff;
-		font-size: 1.5vh;
-		width: 10%;
-		margin-left: 70%;
-		top: 5%;
+	.byggnadnav{
+		color: #FFF;
+		border: 2px solid #FFF;
+		/*margin-top: 10%;*/
+		padding-top: 4%;
+		padding-bottom: 4%;
 	}
 	
-	100% {	
-		font-size: 1.5vh;
-		top: 20%;
-		width: 60%;
-		margin-right: 10%;
-		-webkit-opacity: 1;
+	#byggnad td{
+		text-align: center;
 	}
 	
-}*/
+	table{
+		width: 100%;
+		height: 100%;
+	}
+	
+	.overskrift{
+		visibility: hidden;
+	}
 	
 /* Har gjort denna relative för att testa om buggen med softkeyboard försvinner. */
 	#helamenyn{
