alla http => https

--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -1,8 +1,9 @@
 	.nyinforuta{
 		/*opacity: 0.90;*/
-		position: absolute;
+		position: fixed;
 		z-index: 10;
 		height: 100%;
+		overflow: hidden;
 		/*background-color: #fff;
 		background-color:#5a6280;*/
 		background-color:rgba(0,0,0,0.85);
@@ -38,7 +39,7 @@
 }
 
 #dummie{
-	position: absolute;
+	position: fixed;
 	z-index: -10;
 	width: 100%;
 	height: 100%;
@@ -193,7 +194,7 @@ img.scale-with-grid-tvatt-information{
 
 .information-text-middle-start{
 	text-align: left;
-	vertical-align: middle;
+	/*vertical-align: middle;*/
 	width: auto;
 	/*font-size: 1.5vh;*/
 	/*padding-top: 10px;*/
@@ -248,4 +249,9 @@ img.scale-with-grid-tvatt-information{
 .rutatva a{
 	vertical-align: bottom;
 	text-decoration: none;
+}
+
+table{
+	height: auto;
+	width: 100%;
 }
