--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -13,14 +13,14 @@ SGS Studentbostäder
 		<preference name="permission" value="none" />
 		<preference name="phonegap-version" value="3.3.0" />
 		<preference name="orientation" value="portrait" />
-		<preference name="fullscreen" value="true" />
+		<preference name="fullscreen" value="false" />
 		<preference name="target-device" value="handset" />
 		<preference name="webviewbounce" value="true" />
 		<preference name="prerendered-icon" value="true" />
 		<preference name="stay-in-webview" value="false" />
-		<preference name="ios-statusbarstyle" value="default" />
+		<preference name="ios-statusbarstyle" value="black-opaque" />
 		<preference name="detect-data-types" value="true" />
-		<preference name="exit-on-suspend" value="true" />
+		<preference name="exit-on-suspend" value="false" />
 		<preference name="show-splash-screen-spinner" value="false" />
 		<preference name="auto-hide-splash-screen" value="true" />
 		<preference name="EnableViewportScale" value="false" />
@@ -29,7 +29,7 @@ SGS Studentbostäder
 		<preference name="BackupWebStorage" value="cloud" />
 		<preference name="TopActivityIndicator" value="gray" />
 		<preference name="KeyboardDisplayRequiresUserAction" value="true" />
-		<preference name="HideKeyboardFormAccessoryBar" value="false" />
+		<preference name="HideKeyboardFormAccessoryBar" value="true" />
 		<preference name="SuppressesIncrementalRendering" value="true" />
 		<preference name="android-minSdkVersion" value="7" />
 		<preference name="android-installLocation" value="auto" />
