--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -56,6 +56,7 @@ SGS Studentbostäder
 		<icon src="res/icon/ios/icon-57.png" gap:platform="ios" width="57" height="57" />
 		<icon src="res/icon/ios/icon-72.png" gap:platform="ios" width="72" height="72" />
 		<icon src="res/icon/ios/icon-57-2x.png" gap:platform="ios" width="114" height="114" />
+		<icon src="res/icon/ios/icon-120.png" gap:platform="ios" width="120" height="120" />
 		<icon src="res/icon/ios/icon-72-2x.png" gap:platform="ios" width="144" height="144" />
 		<icon src="res/icon/android/sgs_icon_android_36.png" gap:platform="android" gap:density="ldpi" />
 		<icon src="res/icon/android/sgs_icon_android_48.png" gap:platform="android" gap:density="mdpi" />
