--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -2,7 +2,7 @@
 	<widget xmlns = "http://www.w3.org/ns/widgets"
 		xmlns:gap = "http://phonegap.com/ns/1.0"
 		id        = "com.phonegap.sgsmitthem"
-		versionCode=""
+		versionCode= "2"
 		version   = "1.0.1">
 		<name>SGS Mitt Hem</name>
 		<description>
