--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -2,9 +2,9 @@
 	<widget xmlns = "http://www.w3.org/ns/widgets"
 		xmlns:gap = "http://phonegap.com/ns/1.0"
 		id        = "com.phonegap.sgsmitthem"
-		versionCode= "3"
-		version   = "1.0.2">
-		<name>SGS Mitt Hem (beta)</name>
+		versionCode= "4"
+		version   = "1.1.0">
+		<name>SGS Mitt Hem</name>
 		<description>
 SGS Mitt Hem ger dig som hyresgäst möjlighet att boka olika typer av faciliteter som till exempel tvättstuga och sällskapsrum. Om ditt område är utrustat med öppning av entrédörren via hemma.sgsstudentbostader.se kan du nu öppna dörren med denna applikation.</description>
 		<author href="www.sgsstudentbostader.se" email="app@sgsstudentbostader.se">
